output_9.2.148/gamma.cuh.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/9.2.148'
In file included from /tmp/gamma.cuh-845b27.hip:3:
In file included from /autofs/nccs-svm1_home1/howarth/QUDA_HIP/quda/include/complex_quda.h:22:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/hip_runtime.h:58:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/nvcc_detail/hip_runtime.h:28:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/hip_runtime_api.h:314:
/sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/nvcc_detail/hip_runtime_api.h:1122:34: warning: 'cuCtxDetach' is deprecated [-Wdeprecated-declarations]
    return hipCUResultTohipError(cuCtxDetach(ctx));
                                 ^
/sw/summit/cuda/9.2.148/include/cuda.h:3606:1: note: 'cuCtxDetach' has been explicitly marked deprecated here
__CUDA_DEPRECATED CUresult CUDAAPI cuCtxDetach(CUcontext ctx);
^
/sw/summit/cuda/9.2.148/include/cuda.h:76:42: note: expanded from macro '__CUDA_DEPRECATED'
#define __CUDA_DEPRECATED __attribute__((deprecated))
                                         ^
In file included from /tmp/gamma.cuh-845b27.hip:3:
In file included from /autofs/nccs-svm1_home1/howarth/QUDA_HIP/quda/include/complex_quda.h:22:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/hip_runtime.h:58:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/nvcc_detail/hip_runtime.h:28:
In file included from /sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/hip_runtime_api.h:314:
/sw/summit/hip/hip2.6-cuda9.2/hip/roc-2.6.0/include/hip/nvcc_detail/hip_runtime_api.h:1130:34: warning: 'cuDeviceComputeCapability' is deprecated [-Wdeprecated-declarations]
    return hipCUResultTohipError(cuDeviceComputeCapability(major, minor, device));
                                 ^
/sw/summit/cuda/9.2.148/include/cuda.h:2531:1: note: 'cuDeviceComputeCapability' has been explicitly marked deprecated here
__CUDA_DEPRECATED CUresult CUDAAPI cuDeviceComputeCapability(int *major, int *minor, CUdevice dev);
^
/sw/summit/cuda/9.2.148/include/cuda.h:76:42: note: expanded from macro '__CUDA_DEPRECATED'
#define __CUDA_DEPRECATED __attribute__((deprecated))
                                         ^
/tmp/gamma.cuh-845b27.hip:8:33: error: unknown type name 'QudaGammaBasis'
  template <typename ValueType, QudaGammaBasis basis, int dir>
                                ^
/tmp/gamma.cuh-845b27.hip:29:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-845b27.hip:100:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-845b27.hip:152:27: error: use of undeclared identifier 'QUDA_UKQCD_GAMMA_BASIS'
      } else if (basis == QUDA_UKQCD_GAMMA_BASIS) {
                          ^
/tmp/gamma.cuh-845b27.hip:223:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-845b27.hip:255:27: error: use of undeclared identifier 'QUDA_UKQCD_GAMMA_BASIS'
      } else if (basis == QUDA_UKQCD_GAMMA_BASIS) {
                          ^
2 warnings and 6 errors generated when compiling for host.
Error while processing /tmp/gamma.cuh-845b27.hip.

[HIPIFY] info: file './quda/include/gamma.cuh' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 5570
  CHANGED lines of code: 1
  TOTAL lines of code: 295
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 0
  TIME ELAPSED s: 0.61
